// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Prueba unitara del componente <GifExpertApp /> Debe de mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    Gif Expert App
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Elon Musk"
      key="Elon Musk"
    />
    <GifGrid
      category="SpaceX"
      key="SpaceX"
    />
  </ol>
</Fragment>
`;

exports[`Prueba unitara del componente <GifExpertApp /> Debe tomar una copia del componente <GifExpertApp /> 1`] = `
<Fragment>
  <h2>
    Gif Expert App
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
